[package]
name = "rust-esp32c3"
version = "0.1.0"
authors = ["Gertjan Assies <gertjan.assies@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "hal", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", optional = true, default-features = false }
esp-idf-hal = { version = "0.42.5", optional = true, default-features = false }
esp-idf-sys = { version = "0.33.7", optional = true, default-features = false }
embedded-svc = { version = "0.26.4", optional = true, default-features = false }
smart-leds = "*"
smart-leds-trait = "0.2.1"
anyhow = "1.0.44"
ws2812-esp32-rmt-driver = "0.6.0"
uuid = {version="1.6.1", features=["v4"]} 

[build-dependencies]
embuild = "0.31.3"